Diseño base listo

--- a/plataformaGestionPredial/src/index.html
+++ b/plataformaGestionPredial/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PlataformaGestionPredial</title>
+  <title>Plataforma de gestión predial</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./app/predio.svg">
+  <link rel="icon" type="image/x-icon" href="../assets/predio.svg">
 </head>
 <body>
   <app-root></app-root>
